--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   }
   h2 {
     font-size: 24px;
+    background: -webkit-linear-gradient(rgb(228, 9, 9), rgb(39, 2, 247));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
     text-transform: uppercase;
     color: #303030;
     font-weight: 600;
@@ -42,10 +45,10 @@
     font-size: 5000px;
     font-weight: bolder;
   }
-  .container-fluid {
-    
+  .container-fluid {    
     padding: 60px 50px;
   }
+  
   .bg-grey {
     background-color: #f8f7f7de;
   }
@@ -54,7 +57,9 @@
     font-size: 50px;
   }
   .logo {
-    color: rgb(194, 150, 40);
+    background: -webkit-linear-gradient(rgb(228, 9, 9), rgb(39, 2, 247));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
     font-size: 200px;
   }
   .thumbnail {
@@ -222,12 +227,12 @@
 </nav>
 
 <div class="jumbotron text-center" style="z-index:90" >
-  <h1>Sivasakthi Groups/Builders & cements</h1> 
+  <h1>Sivasakthi Groups/Builders & cements industries</h1> 
   <p>We specialize in Quality</p>  
 </div>
-<div style="background-color: gold;height: 60px;" >
-  <p style="color: black;font-size: 20px;text-align: center;">Sivasakthi Groups/Builders and cements</p>
-  <div style="background-color: gold;text-align: center;"><button style="width: 100px;background-color: black;color:white;"class="btn btn-default btn-lg" onclick=my()>call us.</button></div>
+<div style=" background-color:gold;height: 90px;" >
+  <p style="color: black;font-size: 20px;text-align: center;">Sivasakthi Groups/Builders and cements industries</p>
+  <div style=" background-color:gold;text-align: center;"><button style="width: 100px;background-color: black;color:white;"class="btn btn-default btn-lg" onclick=my()>call us.</button></div>
   
 </div>
 
@@ -261,7 +266,7 @@
 </div>
 
 <!-- Container (Services Section) -->
-<div id="services" class="container-fluid text-center">
+<div id="services" class="container-fluid text-center" >
   <h2>SERVICES</h2>
   <h4>What we offer</h4>
   <br>
@@ -348,13 +353,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" >
       <div class="item active">
-        <h4>"This company is the best. I am so happy with the result!"<br><span></span></h4>
+        <h4 >"This company is the best. I am so happy with the result!"<br><span></span></h4>
       </div>
       <div class="item">
         <h4>"One word... WOW!!"<br><span></span></h4>
       </div>
       <div class="item">
-        <h4>"Could I... BE any more happy with this company?"<br><span></span></h4>
+        <h4 >"Could I... BE any more happy with this company?"<br><span></span></h4>
       </div>
     </div>
 
