--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com -->
-  <title>Sivasakthigroups</title>
+	
+  <title> Sivasakthigroups</title>
+  <link rel="icon" href="logo.jpg" type="image/x-icon">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -11,6 +12,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.575);
+  transition: 0.3s;
+  width: 95%;
+  border-radius: 5px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.con {
+  padding: 5px 6px;
+}
+
+
+
+
   body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
@@ -50,7 +70,7 @@
   }
   
   .bg-grey {
-    background-color: #f8f7f7de;
+    background-color: #f8f7f7a9;
   }
   .logo-small {
     color: goldenrod;
@@ -227,21 +247,23 @@
 </nav>
 
 <div class="jumbotron text-center" style="z-index:90" >
-  <h1>Sivasakthi Groups/Builders & cements industries</h1> 
+  <h1>Sivasakthi Groups/Builders & cement industries</h1> 
   <p>We specialize in Quality</p>  
 </div>
 <div style=" background-color:gold;height: 90px;" >
-  <p style="color: black;font-size: 20px;text-align: center;">Sivasakthi Groups/Builders and cements industries</p>
+  <p style="color: black;font-size: 20px;text-align: center;">Sivasakthi Groups/Builders and cement industries</p>
   <div style=" background-color:gold;text-align: center;"><button style="width: 100px;background-color: black;color:white;"class="btn btn-default btn-lg" onclick=my()>call us.</button></div>
   
 </div>
 
 <!-- Container (About Section) -->
-<div id="about" class="container-fluid">
+<div id="about" class="container-fluid ">
   <div class="row">
-    <div class="col-sm-8">
-      <h2>Welcome to Sivasakthi Groups/Builders & cements</h2><br>
-      <h4>We Are The Leading Construction Company in udumalpet,We Are The Best Contractors and Builders In Udumalpet.there are lot of builders evolving and they are coming out with good innovative project which is the best and lot of people are getting impressed by the impressive plans with them builders in Udumalpet are ready to provide service at any time, when comparing to other builder around Udumalpet.The builders in Udumalpet are considered to be the best.</h4><br>
+    <div class="col-sm-8 ">
+      <h2>Welcome to Sivasakthi Groups/Builders & cement industries</h2><br>
+      <h4>Sivasakthi Groups in Udumalpet is one of the leading businesses in the Hollow Block Manufacturers. Also known for Cement Dealers, Cranes On Hire, Building Contractors, Hollow Block Manufacturers, Precast Compound Wall Manufacturers, Crane Service Providers, Precast Compound Wall Machine Manufacturers, Aac Block Manufacturers and much more. Find Address, Contact Number, Reviews & Ratings, Photos, Maps of Sivasakthi Groups, Udumalpet.
+
+      </h4><br>
 
     </div>
     <div class="col-sm-4">
@@ -250,14 +272,14 @@
   </div>
 </div>
 
-<div class="container-fluid bg-grey" >
+<div class="container-fluid bg-grey " >
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-user logo slideanim"></span>
     </div>
     <div class="col-sm-8" >
       <h2>Our Values</h2><br>
-      <h4><strong>Management:</strong> Mr K. Devaraj, an Civil engineering professional graduated from KCT, Coimbatore. Professionalism we adapt is a combination of technology, skill, dedication and competence put together with which we ensure proper project execution, work excellence, customer satisfaction and thereby to engage the company in a consistent development – an approach which has been crucial to our success.</h4><br>
+      <h4>Established in the year 2011, Sivasakthi Groups in Udamalpet Ho, Udumalpet is a top player in the category Hollow Block Manufacturers in the Udumalpet. This well-known establishment acts as a one-stop destination servicing customers both local and from other parts of Udumalpet. Over the course of its journey, this business has established a firm foothold in it’s industry. The belief that customer satisfaction is as important as their products and services, have helped this establishment garner a vast base of customers, which continues to grow by the day. This business employs individuals that are dedicated towards their respective roles and put in a lot of effort to achieve the common vision and larger goals of the company. In the near future, this business aims to expand its line of products and services and cater to a larger client base. In Udumalpet, this establishment occupies a prominent location in Udamalpet Ho. It is an effortless task in commuting to this establishment as there are various modes of transport readily available. It is at Chinna Veerampatti, Near Tirupur Road, which makes it easy for first-time visitors in locating this establishment. It is known to provide top service in the following categories: Cement Dealers, Cranes On Hire, Building Contractors, Hollow Block Manufacturers, Precast Compound Wall Manufacturers, Crane Service Providers, Precast Compound Wall Machine Manufacturers, Aac Block Manufacturers.</h4><br>
      <!-- <p><strong>VISION:</strong> To be the country’s top provider of first-rate home building materials by catering extensive product selection available in all channels, providing adept customer services to its consumers and reach its largest target market by firmly expanding across prominent cities nationwide.
 
 </p-->
@@ -266,12 +288,12 @@
 </div>
 
 <!-- Container (Services Section) -->
-<div id="services" class="container-fluid text-center" >
+<div id="services" class="container-fluid text-center " >
   <h2>SERVICES</h2>
   <h4>What we offer</h4>
   <br>
   <div class="row slideanim">
-    <div class="col-sm-4">
+    <div class="col-sm-4 ">
        <img src="hallo.jpeg" alt="HOLLOW/SOLID BLOCKS/AAC BLOCK" width="200" height="200">   <!--class="glyphicon glyphicon-off logo-small">-->
       <h4>HOLLOW/SOLID BLOCKS/AAC BLOCK</h4>
     
@@ -314,7 +336,7 @@
 </div>
 
 <!-- Container (Portfolio Section) -->
-<div id="portfolio" class="container-fluid text-center bg-grey" >
+<div id="portfolio" class="container-fluid text-center bg-grey " >
   <h2>Portfolio</h2><br>
   <h4>What we have created Using Precastwalls. </h4>
   <div class="row text-center slideanim">
@@ -332,7 +354,7 @@
 
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 ">
       <div class="thumbnail">
         <img src="3rd.jpg" alt="photo" width="400" height="200">
         <p><strong></strong></p>
@@ -342,7 +364,7 @@
   </div><br>
   
   <h2 >What our customers say</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+  <div id="myCarousel" class="carousel slide text-center " data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
